--- a/calculadora.css
+++ b/calculadora.css
@@ -7,9 +7,9 @@ body {
 }
 
 h1 {
-    color: blue;
+    color: white;
     text-align:center;
-    background-color: yellow;
+    background-color: black;
 }
 
 
