agregando archivos a rama4

--- a/calculadora.css
+++ b/calculadora.css
@@ -7,9 +7,9 @@ body {
 }
 
 h1 {
-    color: white;
+    color: rgb(167, 44, 44);
     text-align:center;
-    background-color: black;
+    background-color: rgb(2, 95, 22);
 }
 
 
