--- a/calculadora.css
+++ b/calculadora.css
@@ -10,6 +10,10 @@ h1 {
     color: blue;
     text-align:center;
     background-color: yellow;
+    margin: 0 auto;
+    padding:0;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 16px;
 }
 
 
